--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ header {
 
 .logo img {
 	float: left;
+	padding: 10px 0;
+    margin-left: -80px;
+    margin-right: 86px;
 }
 
 .menu ul {
@@ -29,9 +32,8 @@ header {
 }
 
 .menu li a {
-    float: left;
-    display: inline-block;
-    margin-left: 20px;
+	float: left;
+	display: inline-block;
     padding: 0px 15px;
     font-family: YanoneKaffeesatzL;
     font-size: 20px;
